--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "python.pythonPath": "/bin/python3"
+    "python.pythonPath": "/bin/python3",
+    "python.analysis.extraPaths": [
+        "./car/detector/yolov5",
+        "./car/detector",
+        "./car"
+    ]
 }
