--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 timo/
 dump/*
 *__pycache__*
+doc/html/python/classpyzed_1_1sl_1_1RESOLUTION-members.html
+doc/html/python/classpyzed_1_1sl_1_1RESOLUTION.html
