--- a/requirements.txt
+++ b/requirements.txt
@@ -22,35 +22,35 @@
 # matplotlib==3.1.2
 # mss==7.0.1
 # netifaces==0.11.0
-# numpy==1.17.4
-# onnx==1.12.0
-# onnxruntime==1.13.1
-# onnxsim==0.4.10
-# opencv_python==4.6.0.66
-# openvino==2022.2.0
+## numpy==1.17.4
+onnx==1.12.0
+onnxruntime==1.13.1
+onnxsim==0.4.10
+opencv_python==4.6.0.66
+openvino==2022.2.0
 # paddle==1.0.2
-# pafy==0.5.5
-# pandas==0.25.3
-# Pillow==9.3.0
-# psutil==5.9.3
+pafy==0.5.5
+pandas==0.25.3
+Pillow==9.3.0
+psutil==5.9.3
 # pycocotools==2.0.6
-# PyOpenGL==3.1.6
-# pytest==7.2.0
-# pytorch_sphinx_theme==0.0.19
-# PyYAML==6.0
-# requests==2.22.0
-# scipy==1.3.3
-# seaborn==0.12.1
-# setuptools==45.2.0
-# simple_websocket_server==0.4.2
-# Sphinx==5.3.0
-# tabulate==0.9.0
+PyOpenGL==3.1.6
+pytest==7.2.0
+pytorch_sphinx_theme==0.0.19
+PyYAML==6.0
+requests==2.22.0
+scipy==1.3.3
+seaborn==0.12.1
+setuptools==45.2.0
+simple_websocket_server==0.4.2
+Sphinx==5.3.0
+tabulate==0.9.0
 # tensorflow==2.11.0
 # tensorflowjs==4.1.0
-# # tensorrt==8.4.1.5
+# tensorrt==8.4.1.5
 # tflite-runtime==2.11.0
 # tflite-support==0.4.3
-thop==0.1.1.post2209072238
+# thop==0.1.1.post2209072238
 # torch==1.12.0a0+2c916ef.nv22.3
 tqdm==4.64.1
 tritonclient==2.28.0
